--- a/Maui.AppMetrica/Maui.AppMetrica.csproj
+++ b/Maui.AppMetrica/Maui.AppMetrica.csproj
@@ -22,4 +22,9 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 	</ItemGroup>
 
+
+	<ItemGroup Condition="$(TargetFramework.Contains('ios'))">
+		<PackageReference Include="Net.iOS.AppMetrica.Binding" Version="5.8.0" />
+	</ItemGroup>
+
 </Project>
